tests/baselines/reference/duplicateIdentifierRelatedSpans6.errors.txt
[91m● [0m[96mfile1.ts[0m:[93m3[0m:[93m9[0m  [91mError[0m TS2300
  [91m[7m [0m [91m▔▔▔▔▔▔▔▔▔▔[0m
Duplicate identifier 'duplicate1'.


  [91m[7m [0m [91m▔▔▔▔▔▔▔▔▔▔[0m
'duplicate1' was also declared here: [96mfile2.ts[0m:[93m5[0m:[93m9[0m

    [96m  [7m [0m [96m▔▔▔▔▔▔▔▔▔▔[0m[91m● [0m[96mfile1.ts[0m:[93m4[0m:[93m9[0m  [91mError[0m TS2300
  [91m[7m [0m [91m▔▔▔▔▔▔▔▔▔▔[0m
Duplicate identifier 'duplicate2'.


  [91m[7m [0m [91m▔▔▔▔▔▔▔▔▔▔[0m
'duplicate2' was also declared here: [96mfile2.ts[0m:[93m6[0m:[93m9[0m

    [96m  [7m [0m [96m▔▔▔▔▔▔▔▔▔▔[0m[91m● [0m[96mfile1.ts[0m:[93m5[0m:[93m9[0m  [91mError[0m TS2300
  [91m[7m [0m [91m▔▔▔▔▔▔▔▔▔▔[0m
Duplicate identifier 'duplicate3'.


  [91m[7m [0m [91m▔▔▔▔▔▔▔▔▔▔[0m
'duplicate3' was also declared here: [96mfile2.ts[0m:[93m7[0m:[93m9[0m

    [96m  [7m [0m [96m▔▔▔▔▔▔▔▔▔▔[0m[91m● [0m[96mfile2.ts[0m:[93m5[0m:[93m9[0m  [91mError[0m TS2300
  [91m[7m [0m [91m▔▔▔▔▔▔▔▔▔▔[0m
Duplicate identifier 'duplicate1'.


  [91m[7m [0m [91m▔▔▔▔▔▔▔▔▔▔[0m
'duplicate1' was also declared here: [96mfile1.ts[0m:[93m3[0m:[93m9[0m

    [96m  [7m [0m [96m▔▔▔▔▔▔▔▔▔▔[0m[91m● [0m[96mfile2.ts[0m:[93m6[0m:[93m9[0m  [91mError[0m TS2300
  [91m[7m [0m [91m▔▔▔▔▔▔▔▔▔▔[0m
Duplicate identifier 'duplicate2'.


  [91m[7m [0m [91m▔▔▔▔▔▔▔▔▔▔[0m
'duplicate2' was also declared here: [96mfile1.ts[0m:[93m4[0m:[93m9[0m

    [96m  [7m [0m [96m▔▔▔▔▔▔▔▔▔▔[0m[91m● [0m[96mfile2.ts[0m:[93m7[0m:[93m9[0m  [91mError[0m TS2300
  [91m[7m [0m [91m▔▔▔▔▔▔▔▔▔▔[0m
Duplicate identifier 'duplicate3'.


  [91m[7m [0m [91m▔▔▔▔▔▔▔▔▔▔[0m
'duplicate3' was also declared here: [96mfile1.ts[0m:[93m5[0m:[93m9[0m

    [96m  [7m [0m [96m▔▔▔▔▔▔▔▔▔▔[0m

==== file2.ts (3 errors) ====
    /// <reference path="./file1" />
    
    declare module "someMod" {
        export interface TopLevel {
            duplicate1(): number;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate1'.
!!! related TS6203 file1.ts:3:9: 'duplicate1' was also declared here:
            duplicate2(): number;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate2'.
!!! related TS6203 file1.ts:4:9: 'duplicate2' was also declared here:
            duplicate3(): number;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate3'.
!!! related TS6203 file1.ts:5:9: 'duplicate3' was also declared here:
        }
    }
    export {};
    
==== file1.ts (3 errors) ====
    declare module "someMod" {
        export interface TopLevel {
            duplicate1: () => string;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate1'.
!!! related TS6203 file2.ts:5:9: 'duplicate1' was also declared here:
            duplicate2: () => string;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate2'.
!!! related TS6203 file2.ts:6:9: 'duplicate2' was also declared here:
            duplicate3: () => string;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate3'.
!!! related TS6203 file2.ts:7:9: 'duplicate3' was also declared here:
        }
    }
Found 6 errors in 2 files.

Errors  Files
     3  file1.ts[90m:3[0m
     3  file2.ts[90m:5[0m
